--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -1,14 +1,11 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import '@/style/main.scss';
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 html,
 body {
@@ -17,8 +14,7 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: $text;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -33,10 +29,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
